--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>art</title>
     <link rel="stylesheet" href="assents/Styles/estilos.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="assents/img/logo.01.jpg" alt="logo" class="logo">
+        <nav>
+            <a href="">1</a>
+            <a href="">2</a>
+            <a href="">3</a>
+            <a href="">4</a>
+            <a href="">5</a>
+        </nav>
+    </header>
 </body>
 </html>
