barra de atalho

--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>art</title>
     <link rel="stylesheet" href="assents/Styles/estilos.css">
+    <link rel="shortcut icon" type="imagex/png" href="assents/img/logo.jpg" >
 </head>
 <body>
     <header>
-        <img src="assents/img/logo.01.jpg" alt="logo" class="logo">
+        <div class="logo">
+            <img src="assents/img/logo.01.jpg" alt="logo" class="foto">
+        </div>
         <nav>
-            <a href="">1</a>
-            <a href="">2</a>
-            <a href="">3</a>
-            <a href="">4</a>
-            <a href="">5</a>
+            <a href=""><h2 class="h22">1</h2></a>
+            <a href=""><h2 class="h22">2</h2></a>
+            <a href=""><h2 class="h22">3</h2></a>
+            <a href=""><h2 class="h22">4</h2></a>
+            <a href=""><h2 class="h22">5</h2></a>
         </nav>
     </header>
+    <div class="conteiner">
+        
+    </div>
 </body>
 </html>
