--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>art</title>
     <link rel="stylesheet" href="assents/Styles/estilos.css">
     <link rel="shortcut icon" type="imagex/png" href="assents/img/logo.jpg" >
+    <style>body{background-image: url("assents/img/05182734a1e86902f139e7f940bd0114.jpg");}</style>
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
             <img src="assents/img/logo.01.jpg" alt="logo" class="foto">
         </div>
         <nav>
-            <a href=""><h2 class="h22">1</h2></a>
+            <a href=""><img src="assents/img/cat-removebg-preview.png" alt="f" class="cat"></a>
             <a href=""><h2 class="h22">2</h2></a>
             <a href=""><h2 class="h22">3</h2></a>
             <a href=""><h2 class="h22">4</h2></a>
@@ -21,7 +22,7 @@
         </nav>
     </header>
     <div class="conteiner">
-        
+
     </div>
 </body>
 </html>
