--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>art</title>
     <link rel="stylesheet" href="assents/Styles/estilos.css">
     <link rel="shortcut icon" type="imagex/png" href="assents/img/logo.jpg" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
@@ -14,10 +15,10 @@
         </div>
         <nav>
             <a href="#home"><img src="assents/img/cat-removebg-preview.png" alt="f" class="cat"></a>
-            <a href="#2"><h2 class="h22">2</h2></a>
-            <a href="#3"><h2 class="h22">3</h2></a>
-            <a href="#4"><h2 class="h22">4</h2></a>
-            <a href="#5"><h2 class="h22">5</h2></a>
+            <a href="#2" class=" h22" ><i class="bi bi-diamond-fill haha"></i></a>
+            <a href="#3" class= " h22"><i class="bi bi-radioactive hehe"></i></a>
+            <a href="#4" class=" h22"><i class="bi bi-nintendo-switch hoho"></i></a>
+            <a href="#5" class=" h22"><i class="bi bi-gitlab huhu"></i></a>
         </nav>
     </header>
     <div class="conteiner" id="home">
